--- a/viewpost.html
+++ b/viewpost.html
@@ -36,33 +36,30 @@
             <div class="col-md-12">
                 <article>
                     <header>
-                        <h2>Cheap(ish) Things Every New Pet Owner Needs</h2>
+                        <h2>Лакадима - a.k.a Най-Хубавата</h2>
                     </header>
-
+                    <img width="400" height="300" src="images/1.jpg"/>
                     <p>
-                        Welcome to the Smarter Living newsletter. Each week we email readers with tips and advice for living a better, more fulfilling life. Sign up here to get it in your inbox.
-
-                        Hi, everyone! I’m Will Dudding, a friend of Smarter Living and the owner of an elderly golden retriever. I’m here to talk about a few things every new pet owner needs, in collaboration with Wirecutter, a New York Times company that reviews and recommends products.
-
-                        Beyond the leash, collar, bed and crate, plenty of universal items are not as obvious to a first-time owner. Here are five cheap(ish) accessories that will help you make the most out of your new relationship.
-
-                        Spill-proof water bowl
-
-                        If you’ve ever witnessed a thirsty dog collide with a bowl of water on a hot summer day, you and your floor can both appreciate this essential item. The key to a good water bowl is utility, and while the folding models are convenient for travel, they tend to collapse during zealous use.
-
-                        Wirecutter recommends this economical and completely useful anti-leak option from Pet Supply Imports that works even in a moving vehicle.
-
-                        Continue reading the main story
-                        Advertisement
-
-                        Continue reading the main story
-
-                        GPS tracker
-
-                        The first rule of owning a pet is not losing the pet. In 2018, we’re beyond the days when our best lost-and-found resource was a handwritten sign on a telephone pole. If you have a dog or cat that roams around the neighborhood, a GPS tracker ensures you can find them.
-
-                        Wirecutter’s favorite is the Whistle 3 GPS Pet Tracker & Activity Monitor. At $80 it’s on the higher end of cheap(ish), but well worth it when you consider the years it could add to the time spent with your pet.
+                        Това е основната ми роля отрепки!!! Не ме безпокойте!!! Освен ако не става въпрос за ядене!!!
                     </p>
+                    <img width="400" height="300" src="images/2.jpg"/>
+                    <p>
+                        Обичам и да се излежавам и по гръб!
+                    </p>
+
+                    <small class="author">
+                        <img width="400" height="300" src="images/3.jpg"/>
+                        <p>
+                            Имам и функция за нощно виждане. Трябва да държа под око отрепките, които живеят унас.
+                        </p>
+                        <img width="400" height="300" src="images/4.jpg"/>
+                        <p>
+                            Според мен всичко, което хвърчи се яде.
+                        </p>
+                        <img width="400" height="300" src="images/5.jpg"/>
+                        <p>
+                            Често раздавам и автографи. Този го търпя, само заради една сива блуза, много ми е удобна.
+                        </p>
                     <small class="author">
 
                     </small>
